--- a/css/style.css
+++ b/css/style.css
@@ -29,7 +29,7 @@ body {
   margin-top: -80px;
   padding-top: 80px;
   min-height: 822px;
-  background: url(./public/bg-image.png);
+  background: url(/./public/bg-image.png);
   background-size: cover;
   border-bottom-left-radius: 64px;
   border-bottom-right-radius: 64px;
